# persevere

./: .gitmodules  .travis.yml  README.md  persevere.cabal
src/Irreverent/: Persevere.hs
src/Irreverent/Persevere/: Data.hs
src/Irreverent/Persevere/Control/: Retry.hs
test/: test.hs
test/Test/Irreverent/Persevere/: Arbitrary.hs  Data.hs
test/Test/Irreverent/Persevere/Control/: Retry.hs
