name:               irreverent-persevere
version:            0.0.1
license:            BSD3
license-file:       LICENSE.md
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2017-2018 Irreverent Pixel Feats
synopsis:           Retries
category:           Data
description:        Retries
homepage:           https://github.com/irreverent-pixel-feats/persevere/issues
bug-reports:        https://github.com/irreverent-pixel-feats/persevere/issues
cabal-version:      >= 1.18
build-type:         Simple
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://github.com/irreverent-pixel-feats/persevere.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      base < 5 && >= 4
                    ,   containers
                    ,   array
                    ,   domdere-preamble
                    ,   irreverent-quantity-core
                    ,   transformers            > 0.3   && <= 0.6
                    ,   ultra-core
                    ,   ultra-either
                    ,   ultra-text

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Irreverent.Persevere
                        Irreverent.Persevere.Control.Retry
                        Irreverent.Persevere.Data

test-suite              test
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            test.hs
    hs-source-dirs:     test
    build-depends:      base                >= 4 && < 5
                    ,   lab-core
                    ,   domdere-preamble
                    ,   irreverent-quantity-core
                    ,   irreverent-quantity-core-test
                    ,   ultra-core
                    ,   ultra-either
                    ,   irreverent-persevere
